--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -9,11 +9,25 @@
   <link rel="stylesheet" href="https://unpkg.com/netlify-cms@^2.0.0/dist/cms.css" />
   <!-- Include a CMS specific stylesheet here -->
 
+  <!-- Auth script -->
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
 </head>
 <body>
   <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/cms.js"></script>
   <script>
     CMS.registerPreviewStyle("/css/cms-preview.css");
+  </script>
+  <script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
   </script>
 </body>
 </html>
